# Zi

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: main.yml
array/: CMakeLists.txt  array.c  array.h
map/: CMakeLists.txt  unmap.c  unmap.h
matrix/: CMakeLists.txt  matrix.c  matrix.h  matrixCal.c
set/: CMakeLists.txt  set.c  set.h
test/: CMakeLists.txt  arrayCheckIdentity.c  arrayDeleteIndex.c  arrayGrow.c  arrayPush.c  arrayShowDigits.c  matrixConcatMatrixLROutPlace.c  matrixFetchMatrixRowCol.c  matrixNtimesMatrixOutplace.c  matrixRead.c
test/array/: CMakeLists.txt  arrayChangeIndex.c  arrayCheckIdentity.c  arrayDeleteIndex.c  arrayGrow.c  arrayInitAndClear.c  arrayInsertIndex.c  arrayMax.c  arrayProductIntArray.c  arrayPush.c  arraySetIndex.c  arrayShow.c  arrayShowDigits.c
test/map/: CMakeLists.txt  mapOp.c
test/matrix/: CMakeLists.txt  matrixAddMatrix.c  matrixAndMatrix.c  matrixAndNMatrix.c  matrixConcatMatrixLROutPlace.c  matrixConcatMatrixUDOutPlace.c  matrixCreateIdentityMatrix.c  matrixEqMatrix.c  matrixFetchMatrixRowCol.c  matrixGetConstMatrix.c  matrixKProductMatrix.c  matrixNotMatrix.c  matrixNtimesMatrixOutplace.c  matrixOrNMatrix.c  matrixProductMatrix.c  matrixRead.c  matrixShowDigitsMatrix.c  matrixStpMatrix.c  matrixStpTwoTMatrix.c  matrixSwapMatrix.c  matrixTMatrix.c
test/set/: CMakeLists.txt  setInit.c
test/tree/: CMakeLists.txt  bstGetMinMaxNodeBstTree.c  bstGetSucPreNodeBstTree.c  bstInitBstTree.c  bstSearchBstTree.c  rbtMap.c
test/util/: CMakeLists.txt  utilFile.c  utilMatrix.c
tree/: CMakeLists.txt
tree/bst/: CMakeLists.txt  bst.c  bst.h
tree/rbt/: rbt.c  rbt.h
util/: CMakeLists.txt  utilFile.c  utilFile.h  utilMatrix.c  utilMatrix.h
