include_directories(${CMAKE_SOURCE_DIR}/array)
include_directories(${CMAKE_SOURCE_DIR}/matrix)
add_executable(arrayInitAndClear arrayInitAndClear.c)

target_link_libraries(arrayInitAndClear ziArray)
add_test(NAME ArrayTestsInitAndClear COMMAND arrayInitAndClear)

add_executable(arrayGrow arrayGrow.c)
target_link_libraries(arrayGrow ziArray)
add_test(NAME ArrayTestsGrow COMMAND arrayGrow)

add_executable(arrayPush arrayPush.c)
target_link_libraries(arrayPush ziArray)
add_test(NAME ArrayTestsPush COMMAND arrayPush)

add_executable(arrayDeleteIndex arrayDeleteIndex.c)
target_link_libraries(arrayDeleteIndex ziArray)
add_test(NAME ArrayTestsDeleteIndex COMMAND arrayDeleteIndex)

add_executable(arraySetIndex arraySetIndex.c)
target_link_libraries(arraySetIndex ziArray)
add_test(NAME ArrayTestsSetIndex COMMAND arraySetIndex)

add_executable(arrayInsertIndex arrayInsertIndex.c)
target_link_libraries(arrayInsertIndex ziArray)
add_test(NAME ArrayTestsInsertIndex COMMAND arrayInsertIndex)

add_executable(arrayChangeIndex arrayChangeIndex.c)
target_link_libraries(arrayChangeIndex ziArray)
add_test(NAME ArrayTestsChangeIndex COMMAND arrayChangeIndex)

add_executable(arrayCheckIdentity arrayCheckIdentity.c)
target_link_libraries(arrayCheckIdentity ziArray)
add_test(NAME ArrayTestsCheckIdentity COMMAND arrayCheckIdentity)

add_executable(arrayShowDigits arrayShowDigits.c)
target_link_libraries(arrayShowDigits ziArray)
add_test(NAME ArrayTestsShowDigits COMMAND arrayShowDigits)

add_executable(arrayProductIntArray arrayProductIntArray.c)
target_link_libraries(arrayProductIntArray ziArray)
add_test(NAME ArrayTestsProductIntArray COMMAND arrayProductIntArray)

add_executable(matrixRead matrixRead.c)
target_link_libraries(matrixRead ziMatrix)
add_test(NAME MatrixTestsMatrixRead COMMAND matrixRead)

add_executable(matrixFetchMatrixRowCol matrixFetchMatrixRowCol.c)
target_link_libraries(matrixFetchMatrixRowCol ziMatrix)
add_test(NAME MatrixTestsMatrixFetchMatrixRowCol COMMAND matrixFetchMatrixRowCol)

add_executable(matrixAddMatrix matrixAddMatrix.c)
target_link_libraries(matrixAddMatrix ziMatrix)
add_test(NAME MatrixTestsMatrixAddMatrix COMMAND matrixAddMatrix)

add_executable(matrixProductMatrix matrixProductMatrix.c)
target_link_libraries(matrixProductMatrix ziMatrix)
add_test(NAME MatrixTestsMatrixProductMatrix COMMAND matrixProductMatrix)

add_executable(matrixConcatMatrixLROutPlace matrixConcatMatrixLROutPlace.c)
target_link_libraries(matrixConcatMatrixLROutPlace ziMatrix)
add_test(NAME MatrixTestsMatrixConcatMatrixLROutPlace COMMAND matrixConcatMatrixLROutPlace)

add_executable(matrixConcatMatrixUDOutPlace matrixConcatMatrixUDOutPlace.c)
target_link_libraries(matrixConcatMatrixUDOutPlace ziMatrix)
add_test(NAME MatrixTestsMatrixConcatMatrixUDOutPlace COMMAND matrixConcatMatrixUDOutPlace)