include_directories(${CMAKE_SOURCE_DIR}/array)
include_directories(${CMAKE_SOURCE_DIR}/util)
include_directories(${CMAKE_SOURCE_DIR}/matrix)
include_directories(${CMAKE_SOURCE_DIR}/tree/bst)
include_directories(${CMAKE_SOURCE_DIR}/set)
include_directories(${CMAKE_SOURCE_DIR}/map)

add_subdirectory(array)
add_subdirectory(util)
add_subdirectory(matrix)
add_subdirectory(tree)
add_subdirectory(set)
add_subdirectory(map)
