include_directories(${CMAKE_SOURCE_DIR}/matrix)

add_executable(matrixRead matrixRead.c)
target_link_libraries(matrixRead ziMatrix)
add_test(NAME MatrixTestsMatrixRead COMMAND matrixRead)

add_executable(matrixFetchMatrixRowCol matrixFetchMatrixRowCol.c)
target_link_libraries(matrixFetchMatrixRowCol ziMatrix)
add_test(NAME MatrixTestsMatrixFetchMatrixRowCol COMMAND matrixFetchMatrixRowCol)

add_executable(matrixAddMatrix matrixAddMatrix.c)
target_link_libraries(matrixAddMatrix ziMatrix)
add_test(NAME MatrixTestsMatrixAddMatrix COMMAND matrixAddMatrix)

add_executable(matrixProductMatrix matrixProductMatrix.c)
target_link_libraries(matrixProductMatrix ziMatrix)
add_test(NAME MatrixTestsMatrixProductMatrix COMMAND matrixProductMatrix)

add_executable(matrixConcatMatrixLROutPlace matrixConcatMatrixLROutPlace.c)
target_link_libraries(matrixConcatMatrixLROutPlace ziMatrix)
add_test(NAME MatrixTestsMatrixConcatMatrixLROutPlace COMMAND matrixConcatMatrixLROutPlace)

add_executable(matrixConcatMatrixUDOutPlace matrixConcatMatrixUDOutPlace.c)
target_link_libraries(matrixConcatMatrixUDOutPlace ziMatrix)
add_test(NAME MatrixTestsMatrixConcatMatrixUDOutPlace COMMAND matrixConcatMatrixUDOutPlace)

add_executable(matrixNtimesMatrixOutplace matrixNtimesMatrixOutplace.c)
target_link_libraries(matrixNtimesMatrixOutplace ziMatrix)
add_test(NAME MatrixTestsMatrixNtimesMatrixOutplace COMMAND matrixNtimesMatrixOutplace)

add_executable(matrixKProductMatrix matrixKProductMatrix.c)
target_link_libraries(matrixKProductMatrix ziMatrix)
add_test(NAME MatrixTestsMatrixKProductMatrix COMMAND matrixKProductMatrix)

add_executable(matrixCreateIdentityMatrix matrixCreateIdentityMatrix.c)
target_link_libraries(matrixCreateIdentityMatrix ziMatrix)
add_test(NAME MatrixTestsMatrixCreateIdentityMatrix COMMAND matrixCreateIdentityMatrix)

add_executable(matrixStpMatrix matrixStpMatrix.c)
target_link_libraries(matrixStpMatrix ziMatrix)
add_test(NAME MatrixTestsStpMatrix COMMAND matrixStpMatrix)

add_executable(matrixNotMatrix matrixNotMatrix.c)
target_link_libraries(matrixNotMatrix ziMatrix)
add_test(NAME MatrixTestsNotMatrix COMMAND matrixNotMatrix)

add_executable(matrixAndMatrix matrixAndMatrix.c)
target_link_libraries(matrixAndMatrix ziMatrix)
add_test(NAME MatrixTestsAndMatrix COMMAND matrixAndMatrix)

add_executable(matrixAndNMatrix matrixAndNMatrix.c)
target_link_libraries(matrixAndNMatrix ziMatrix)
add_test(NAME MatrixTestsAndNMatrix COMMAND matrixAndNMatrix)

add_executable(matrixOrNMatrix matrixOrNMatrix.c)
target_link_libraries(matrixOrNMatrix ziMatrix)
add_test(NAME MatrixTestsOrNMatrix COMMAND matrixOrNMatrix)

add_executable(matrixTMatrix matrixTMatrix.c)
target_link_libraries(matrixTMatrix ziMatrix)
add_test(NAME MatrixTestsTMatrix COMMAND matrixTMatrix)

add_executable(matrixStpTwoTMatrix matrixStpTwoTMatrix.c)
target_link_libraries(matrixStpTwoTMatrix ziMatrix)
add_test(NAME MatrixTestsStpTwoTMatrix COMMAND matrixStpTwoTMatrix)

add_executable(matrixSwapMatrix matrixSwapMatrix.c)
target_link_libraries(matrixSwapMatrix ziMatrix)
add_test(NAME MatrixSwapMatrix COMMAND matrixSwapMatrix)

add_executable(matrixShowDigitsMatrix matrixShowDigitsMatrix.c)
target_link_libraries(matrixShowDigitsMatrix ziMatrix)
add_test(NAME MatrixTestsShowDigitsMatrix COMMAND matrixShowDigitsMatrix)
